cc_library(
    name = "IdGenerator",
    srcs = ["IdGenerator.cc"],
    hdrs = ["IdGenerator.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "IdGeneratorTest",
    size = "small",
    srcs = ["IdGeneratorTest.cc"],
    deps = [
        ":IdGenerator",
        "@com_google_googletest//:gtest_main",
    ],
)
