cc_library(
    name = "Account",
    srcs = [
        "Account.cc",
        "Account.h",
        "//src/id_generator:IdGenerator",
    ],
    deps = ["//src/id_generator:IdGenerator"],
)

cc_test(
    name = "AccountTest",
    size = "small",
    srcs = ["AccountTest.cc"],
    defines = ["FIXED_SEED"],
    deps = [
        ":Account",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "AccountRandomTest",
    size = "small",
    srcs = ["AccountRandomTest.cc"],
    # args = ["--gtest_repeat=5"],
    deps = [
        ":Account",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "Account_Util",
    srcs = [
        "Account_Util.cc",
        "Account_Util.h",
    ],
    deps = [
        ":Account",
        ":Savings_Account",
    ],
)

cc_library(
    name = "Savings_Account",
    srcs = [
        "Savings_Account.cc",
        "Savings_Account.h",
        "//src/id_generator:IdGenerator",
    ],
    deps = [":Account"],
)
